# ai-slop-detector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml
docs/: example-workflow.yml
scripts/: capture_fixture.py
src/ai_slop_detector/: __init__.py  action_entrypoint.py  aggregator.py  budget.py  claude_client.py  cli.py  eval.py  eval_viewer_app.py  github_client.py  golden.py  labeler_app.py  state.py
src/ai_slop_detector/graph/: __init__.py  nodes.py  pipeline.py
src/pr_triage/: __init__.py  aggregator.py  claude_client.py  cli.py  eval.py  eval_viewer_app.py  github_client.py  golden.py  harvest.py  labeler_app.py  prelabel.py  rag.py  state.py
src/pr_triage/graph/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_action_entrypoint.py  test_aggregator.py  test_budget.py  test_claude_client.py  test_cli.py  test_eval_metrics.py  test_github_client.py  test_golden.py  test_graph.py  test_harvest.py  test_prelabel.py  test_rag.py  test_state.py
tests/fixtures/: papertriage_pr1.json  papertriage_pr9.json
tests/fixtures/golden/: README.md  SOURCES.md  astral-sh__ruff_pr13562.json  astral-sh__ruff_pr13579.json  astral-sh__ruff_pr13580.json  astral-sh__ruff_pr13596.json  astral-sh__ruff_pr22067.json  astral-sh__ruff_pr24239.json  astral-sh__ruff_pr24260.json  astral-sh__ruff_pr24442.json  astral-sh__ruff_pr24572.json  curl__curl_pr19871.json  curl__curl_pr21226.json  curl__curl_pr21349.json  curl__curl_pr21451.json  curl__curl_pr21465.json  ghostty-org__ghostty_pr10515.json  ghostty-org__ghostty_pr10614.json  ghostty-org__ghostty_pr11354.json  ghostty-org__ghostty_pr12267.json  ghostty-org__ghostty_pr12402.json  godotengine__godot_pr107234.json  godotengine__godot_pr110523.json  godotengine__godot_pr111859.json  godotengine__godot_pr114943.json  godotengine__godot_pr116422.json  godotengine__godot_pr116576.json  home-assistant__core_pr159732.json  home-assistant__core_pr165375.json  home-assistant__core_pr167279.json  home-assistant__core_pr167929.json  home-assistant__core_pr168672.json  home-assistant__core_pr168893.json  manifest.json  pydantic__pydantic_pr13076.json  pydantic__pydantic_pr13079.json  pydantic__pydantic_pr13082.json  pydantic__pydantic_pr13083.json  pydantic__pydantic_pr13091.json  pydantic__pydantic_pr13100.json  (+16 more)
tests/fixtures/golden_archive_post_hoc_only/: README.md  curl__curl_pr21465.json  pydantic__pydantic_pr13083.json  pydantic__pydantic_pr13100.json
tests/fixtures/llm/: check_Tomislav-Sola__papertriage_pr9.json
