[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-triage"
version = "0.1.0"
description = "Multi-agent PR triage CLI for OSS maintainers"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.3",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
pr-triage = "pr_triage.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
