[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-slop-detector"
version = "0.3.0"
description = "Multi-agent binary AI-slop classifier for pull requests. Built for OSS maintainers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tomislav Sola", email = "Tomislav.Sola@gmx.de"},
]
keywords = [
    "pull-request",
    "github",
    "ai-slop",
    "code-review",
    "langgraph",
    "anthropic",
    "claude",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "PyGithub>=2.3",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "anthropic>=0.50",
    "langgraph>=0.3",
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]
eval = [
    "streamlit>=1.35",
]

[project.urls]
Homepage = "https://github.com/Tomislav-Sola/ai-slop-detector"
Repository = "https://github.com/Tomislav-Sola/ai-slop-detector"
Issues = "https://github.com/Tomislav-Sola/ai-slop-detector/issues"

[project.scripts]
ai-slop-detector = "ai_slop_detector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Streamlit UI apps are excluded — they have no unit tests by design (manual UI flows).
omit = [
    "*/labeler_app.py",
    "*/eval_viewer_app.py",
]
